[tool.poetry]
name = "gerenciador_de_biblioteca"
version = "0.1.0"
description = ""
authors = ["Catrofe <82066310+Catrofe@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.1"
fastapi = "^0.73.0"
peewee = "^3.14.8"
mysql-connector = "^2.2.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"